--- a/CSS/main.css
+++ b/CSS/main.css
@@ -71,6 +71,7 @@ body {
     left: 0px;
     width: 100%;
     border-top: 3px solid steelblue;
+    visibility: hidden;
 }
 
 #item-1 {
@@ -95,6 +96,46 @@ body {
 #content {
     display: grid;
     grid-template-rows: auto auto auto;
+    grid-template-columns: auto auto;
+}
+#item-2-1 {
+  grid-row-start: 1;
+  grid-column: 1 / 3;
+  padding-top: 15%;
+  padding-bottom: 15%;
+  background-image: url('https://www.thunderbirdpools.com/wp-content/uploads/2017/03/pool-21.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  border: 3px solid steelblue;
+}
+#item-2-2 {
+  grid-row-start: 2;
+  grid-column: 1 / 3;
+  background-color: steelblue;
+  text-align: center;
+  padding-left: 30%;
+  padding-right: 30%;
+}
+#item-2-3 {
+  grid-row-start: 3;
+  grid-column: 1;
+  padding-left: 10%;
+  padding-right: 10%;
+  display: inline;
+}
+#item-2-4 {
+  grid-row-start: 3;
+  grid-column: 2;
+}
+#item-2-4 img {
+  max-width: 60%;
+  padding: 20%;
+  padding-top: 5%;
+}
+#content h1 {
+  color: white;
+  text-align: center;
 }
 
 /*
