--- a/CSS/main.css
+++ b/CSS/main.css
@@ -134,6 +134,13 @@ body {
   text-align: center;
 }
 
+/*Order Form*/
+.grid-container2 #logo{
+  padding: 15%;
+  text-align: center;
+  color: white;
+  margin: 5px;
+}
 /*
 @media screen and (max-width: 600px) {
   .topnav .search-container {
