--- a/CSS/main.css
+++ b/CSS/main.css
@@ -134,6 +134,83 @@ body {
   text-align: center;
 }
 
+
+/*Gallery*/
+#Gallery {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-template-rows: auto auto auto;
+  max-width: 100%;
+  min-height: 100%;
+  padding: 15%;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  align-items: stretch;
+  grid-gap: 5%;
+}
+#item-3-1 {
+  grid-column: 1;
+  grid-row: 1;
+}
+#item-3-2 {
+  grid-column: 2;
+  grid-row: 1;
+}
+#item-3-3 {
+  grid-column: 3;
+  grid-row: 1;
+}
+#item-3-4 {
+  grid-column: 4;
+  grid-row: 1;
+}
+#item-3-5 {
+  grid-column: 1;
+  grid-row: 2;
+}
+#item-3-6 {
+  grid-column: 2;
+  grid-row: 2;
+}
+#item-3-7 {
+  grid-column: 3;
+  grid-row: 2;
+}
+#item-3-8 {
+  grid-column: 4;
+  grid-row: 2;
+}
+#item-3-9 {
+  grid-column: 1;
+  grid-row: 3;
+}
+#item-3-10 {
+  grid-column: 2;
+  grid-row: 3;
+}
+#item-3-11 {
+  grid-column: 3;
+  grid-row: 3;
+}
+#item-3-12 {
+  grid-column: 4;
+  grid-row: 3;
+}
+
+.images {
+  max-width: 100%;
+}
+
+.imagesFS {
+  position: absolute;
+  visibility: hidden;
+  grid-column: 1 / 4;
+  grid-row: 1 / 3;
+}
+
+#Gallery .images:hover {
+  filter: contrast(10%);
+}
 /*
 @media screen and (max-width: 600px) {
   .topnav .search-container {
