--- a/CSS/main.css
+++ b/CSS/main.css
@@ -6,6 +6,8 @@ body {
 .topnav {
   overflow: hidden;
   background-color: #e9e9e9;
+  background-color: #b0b0b0;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='37' height='37' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='100' y1='33' x2='100' y2='-3'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='100' y1='135' x2='100' y2='97'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23969696' fill-opacity='0.6'%3E%3Crect x='100' width='100' height='100'/%3E%3Crect y='100' width='100' height='100'/%3E%3C/g%3E%3Cg fill-opacity='0.5'%3E%3Cpolygon fill='url(%23a)' points='100 30 0 0 200 0'/%3E%3Cpolygon fill='url(%23b)' points='100 100 0 130 0 100 200 100 200 130'/%3E%3C/g%3E%3C/svg%3E");
 }
 
 .topnav a {
@@ -16,6 +18,7 @@ body {
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+  background-color: lightgray;
 }
 
 .topnav a:hover {
@@ -56,6 +59,8 @@ body {
     margin: 5px;
 }
 
+
+
 .topnav #underline {
     border-top: 3px solid steelblue;
     margin-bottom: 0px;
@@ -65,9 +70,9 @@ body {
     display: grid;
     grid-template-columns: auto auto auto;
     overflow: hidden;
-    background-color: #e9e9e9;
     width: 100%;
     border-top: 3px solid steelblue;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%235f5f5f' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23000000'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
 }
 
 #item-1 {
@@ -93,6 +98,7 @@ body {
     display: grid;
     grid-template-rows: auto auto auto;
     grid-template-columns: auto auto;
+    font-size: 140%;
 }
 #item-2-1 {
   grid-row-start: 1;
@@ -121,13 +127,35 @@ body {
   display: inline;
 }
 #item-2-4 {
-  grid-row-start: 3;
+  grid-row: 3/5;
   grid-column: 2;
 }
 #item-2-4 img {
   max-width: 60%;
   padding: 20%;
   padding-top: 20%;
+}
+
+#navigationButtons {
+  grid-row: 4;
+  grid-column: 1;
+  display: flex;
+  flex-wrap: nowrap;
+}
+#item-0-1, #item-0-2 {
+  color: black;
+  text-decoration: none;
+}
+#navigationButtons button{
+  background-color: #ddd;
+  font-size: 25px;
+  border: 3px solid steelblue;
+  height: 40px;
+  cursor: pointer;
+  margin: 15px;
+  margin-bottom: 0px;
+  margin-left: auto;
+  margin-right: auto;
 }
 #content h1 {
   color: white;
@@ -142,82 +170,82 @@ body {
   grid-template-rows: auto auto auto;
   max-width: 100%;
   min-height: 100%;
-  padding: 15%;
-  padding-top: 5%;
-  padding-bottom: 5%;
   align-items: stretch;
-  grid-gap: 5%;
+  justify-items: center;
+  text-align: center;
+  margin: 5%;
+  grid-gap: 10px;
+}
+#item-3-0 {
+  grid-column: 1/5;
+  grid-row: 1;
 }
 #item-3-1 {
   grid-column: 1;
-  grid-row: 1;
+  grid-row: 2;
 }
 #item-3-2 {
   grid-column: 2;
-  grid-row: 1;
+  grid-row: 2;
 }
 #item-3-3 {
   grid-column: 3;
-  grid-row: 1;
+  grid-row: 2;
 }
 #item-3-4 {
   grid-column: 4;
-  grid-row: 1;
+  grid-row: 2;
 }
 #item-3-5 {
   grid-column: 1;
-  grid-row: 2;
+  grid-row: 3;
 }
 #item-3-6 {
   grid-column: 2;
-  grid-row: 2;
+  grid-row: 3;
 }
 #item-3-7 {
   grid-column: 3;
-  grid-row: 2;
+  grid-row: 3;
 }
 #item-3-8 {
   grid-column: 4;
-  grid-row: 2;
+  grid-row: 3;
 }
 #item-3-9 {
   grid-column: 1;
-  grid-row: 3;
+  grid-row: 4;
 }
 #item-3-10 {
   grid-column: 2;
-  grid-row: 3;
+  grid-row: 4;
 }
 #item-3-11 {
   grid-column: 3;
-  grid-row: 3;
+  grid-row: 4;
 }
 #item-3-12 {
   grid-column: 4;
-  grid-row: 3;
+  grid-row: 4;
+}
+#item-3-13 {
+  grid-column: 1/5;
+  grid-row: 5;
+}
+#item-3-14 {
+  grid-column: 1/5;
+  grid-row-start: 6;
 }
 
 .images {
   max-width: 100%;
-}
-
-.imagesFS {
-  position: absolute;
-  visibility: hidden;
-  grid-column: 1 / 4;
-  grid-row: 1 / 3;
-}
-
-#Gallery .images:hover {
-  filter: contrast(10%);
+  padding: 5%;
 }
 /*Order Form*/
 
 .grid-container2 #logo {
-  padding: 15%;
   text-align: center;
   color: white;
-  margin: 5px;
 }
 /*
 @media screen and (max-width: 600px) {
