--- a/CSS/main.css
+++ b/CSS/main.css
@@ -98,7 +98,6 @@ body {
     display: grid;
     grid-template-rows: auto auto auto;
     grid-template-columns: auto auto;
-    font-size: 140%;
 }
 #item-2-1 {
   grid-row-start: 1;
@@ -246,6 +245,80 @@ body {
 .grid-container2 #logo {
   text-align: center;
   color: white;
+}
+
+/* About Page*/
+#aboutContainer {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto auto auto;
+}
+#aboutContainer button {
+  background-color: #ddd;
+  font-size: 25px;
+  border: 3px solid steelblue;
+  height: 40px;
+  cursor: pointer;
+  margin: 15px;
+  margin-bottom: 0px;
+  margin-left: auto;
+  margin-right: auto;
+}
+#aboutButton {
+  text-decoration: none;
+  color: black;
+}
+#item-4-1 {
+  grid-row: 1;
+  grid-column: 1 / 3;
+  background-image: url(https://www.thunderbirdpools.com/wp-content/uploads/2017/03/pool-30.jpg);
+  padding-top: 15%;
+  padding-bottom: 15%;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  color: white;
+}
+#item-4-2 {
+  grid-row: 2;
+  grid-column: 1 / 3;
+}
+#item-4-3 {
+  grid-row: 3;
+  grid-column: 1;
+}
+#item-4-4 {
+  grid-row: 3;
+  grid-column: 2;
+}
+#item-4-5 {
+  grid-row: 4;
+  grid-column: 1;
+}
+#item-4-6 {
+  grid-row: 4;
+  grid-column: 2;
+}
+#item-4-7 {
+  grid-row: 5;
+  grid-column: 1/3;
+  background-image: url(https://www.thunderbirdpools.com/wp-content/uploads/2017/03/wesley-2.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top;
+}
+.aboutItems {
+  border: 3px solid steelblue;
+  text-align: center;
+  background-color: steelblue;
+  margin: 5px;
+  grid-gap: 5px;
+  padding: 5%;
+  padding-top: 20%;
+}
+.aboutImgs {
+  max-width: 98.5%;
+  margin: 5px;
 }
 /*
 @media screen and (max-width: 600px) {
