--- a/CSS/main.css
+++ b/CSS/main.css
@@ -3,6 +3,24 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.headerImg {
+  grid-row-start: 1;
+  grid-column: 1 / 3;
+  padding-top: 15%;
+  padding-bottom: 15%;
+  margin: 5px;
+  text-align: center;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  border: 3px solid steelblue;
+  color: white;
+}
+
+#homeLogo {
+  background-image: url(../images/HomeLogo.jpg);
+}
+
 .topnav {
   overflow: hidden;
   background-color: #e9e9e9;
@@ -66,6 +84,7 @@ body {
     margin-bottom: 0px;
 }
 
+/* footer */
 #footer {
     display: grid;
     grid-template-columns: auto auto auto;
@@ -165,10 +184,19 @@ body {
 /*Gallery*/
 #Gallery {
   display: grid;
-  grid-template-columns: auto auto auto auto;
-  grid-template-rows: auto auto auto;
-  max-width: 100%;
-  min-height: 100%;
+  grid-template-columns: auto;
+  grid-template-rows: auto auto auto auto auto;
+  justify-items: center;
+  text-align: center;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+#galleryImgs {
+  grid-row: 2;
+  grid-column: 1;
+  display: grid;
+  grid-template-rows: 12;
+  grid-template-columns: auto;
   align-items: stretch;
   justify-items: center;
   text-align: center;
@@ -176,7 +204,7 @@ body {
   grid-gap: 10px;
 }
 #item-3-0 {
-  grid-column: 1/5;
+  grid-column: 1;
   grid-row: 1;
 }
 #item-3-1 {
@@ -228,12 +256,14 @@ body {
   grid-row: 4;
 }
 #item-3-13 {
-  grid-column: 1/5;
+  grid-column: 1;
   grid-row: 5;
 }
 #item-3-14 {
-  grid-column: 1/5;
+  grid-column: 1;
   grid-row-start: 6;
+  width: 560px;
+  height: 315px;
 }
 
 .images {
@@ -248,6 +278,10 @@ body {
 }
 
 /* About Page*/
+#galleryHeader {
+  background-image: url(../images/Gallerylogo.jpg);
+}
+
 #aboutContainer {
   display: grid;
   grid-template-columns: auto auto;
@@ -272,12 +306,6 @@ body {
   grid-row: 1;
   grid-column: 1 / 3;
   background-image: url(https://www.thunderbirdpools.com/wp-content/uploads/2017/03/pool-30.jpg);
-  padding-top: 15%;
-  padding-bottom: 15%;
-  background-size: cover;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  color: white;
 }
 #item-4-2 {
   grid-row: 2;
@@ -306,6 +334,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
+  color: white;
 }
 .aboutItems {
   border: 3px solid steelblue;
@@ -315,13 +344,104 @@ body {
   grid-gap: 5px;
   padding: 5%;
   padding-top: 20%;
+  max-width: 100%;
 }
 .aboutImgs {
-  max-width: 98.5%;
   margin: 5px;
+  max-width: 99%;
+
 }
-/*
-@media screen and (max-width: 600px) {
+
+/*Form*/
+#form {
+  margin: 5px;
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+#form > fieldset {
+  min-height: 200px;
+}
+#formHeader {
+  background-image: url(../images/FormLogo.jpg);
+  background-position: center;
+}
+#form-grid-container{
+  display: grid;
+  grid-template-columns: auto auto auto;
+  text-align: center;
+}
+#designItem-1 {
+  grid-column: 1;
+}
+#designItem-2 {
+  grid-column: 2;
+}
+#designItem-3 {
+  grid-column: 3;
+}
+#contact-grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+}
+#item-7-1 {
+  grid-column: 1;
+}
+#item-7-2 {
+  grid-column: 2;
+}
+#item-7-3 {
+  grid-column: 3;
+}
+#item-7-4 {
+  grid-column: 4;
+}
+#item-7-5 {
+  grid-column: 5;
+}
+.contactInfo{
+  padding:10px;
+  color: steelblue;
+  background-color: #e9e9e9;
+  text-align: center;
+}
+.title{
+  padding:20px;
+}
+
+#commentSection {
+  background-color: steelblue;
+  margin: 5px;
+  display: grid;
+  grid-template-rows: auto auto auto auto auto;
+}
+#commentHeader {
+  grid-row: 1;
+  text-align: center;
+}
+#item-8-1 {
+  grid-row: 2;
+}
+#item-8-2 {
+  grid-row: 3;
+}
+#item-8-3 {
+  grid-row: 4;
+}
+#item-8-4 {
+  grid-row: 5;
+}
+.comments {
+  background-color: #e9e9e9;
+  text-align: center;
+  margin: 15px;
+  padding-left: 20%;
+  padding-right: 20%;
+}
+
+@media screen and (max-width: 479px) {
+  .topnav {
+    text-align: center;
+  }
   .topnav .search-container {
     float: none;
   }
@@ -334,7 +454,199 @@ body {
     padding: 14px;
   }
   .topnav input[type=text] {
-    border: 1px solid #ccc;  
+    border: 1px solid #ccc;
+    padding: 0px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 17px;
+    width: calc(100% - 2px);
+  }
+  .topnav button {
+    position: absolute;
+    visibility: hidden;
+  }
+
+  #item-2-2 {
+    padding-left: 2px;
+    padding-right: 2px;
+  }
+
+  /* Form Phone DIsplay mode thingy */
+  #commentSection div {
+    padding-left: 2px;
+    padding-right: 2px;
+  }
+
+  #contact-grid-container {
+    grid-gap: 20px;
+  }
+
+  #item-7-1 {
+    grid-row: 1;
+    grid-column: 3;
+  }
+  #item-7-2 {
+    grid-row: 2;
+    grid-column: 3;
+  }
+  #item-7-3 {
+    grid-row: 3;
+    grid-column: 3;
+  }
+  #item-7-4 {
+    grid-row: 4;
+    grid-column: 3;
+  }
+  #item-7-5 {
+    grid-row: 5;
+    grid-column: 3;
+  }
+
+  #form-grid-container {
+    grid-gap: 20px;
+  }
+  
+  #designItem-1 {
+    grid-row: 1;
+    grid-column: 2;
+  }
+  #designItem-2 {
+    grid-row: 2;
+    grid-column: 2;
+  }
+  #designItem-3 {
+    grid-row: 3;
+    grid-column: 2;
+  }
+
+
+
+  #item-4-1 {
+    grid-row: 1;
+    grid-column: 1 / 3;
+    max-width: 100%;
+  }
+  #item-4-2 {
+    grid-row: 2;
+    grid-column: 1 / 3;
+  }
+  #item-4-3 {
+    grid-row: 3;
+    grid-column: 1/3;
+  }
+  #item-4-4 {
+    grid-row: 4;
+    grid-column: 1/3;
+  }
+  #item-4-5 {
+    grid-row: 5;
+    grid-column: 1/3;
+  }
+  #item-4-6 {
+    grid-row: 6;
+    grid-column: 1/3;
+  }
+  #item-4-7 {
+    grid-row: 7;
+    grid-column: 1/3;
+  }
+
+  /* Gallery */
+  #Gallery {
+    min-width: 100%;
+    grid-template-columns: auto auto;
+    grid-template-rows: 8;
+    max-width: 30%;
+    margin: 0px;
+    padding: 0px;
+    font-size: 8px;
+  }
+  #item-3-0 {
+    grid-column: 1/3;
+    grid-row: 1;
+  }
+  #item-3-1 {
+    grid-column: 1;
+    grid-row: 2;
+    width: 100%;
+  }
+  #item-3-2 {
+    grid-column: 2;
+    grid-row: 2;
+  }
+  #item-3-3 {
+    grid-column: 1;
+    grid-row: 3;
+  }
+  #item-3-4 {
+    grid-column: 2;
+    grid-row: 3;
+  }
+  #item-3-5 {
+    grid-column: 1;
+    grid-row: 4;
+  }
+  #item-3-6 {
+    grid-column: 2;
+    grid-row: 4;
+  }
+  #item-3-7 {
+    grid-column: 1;
+    grid-row: 5;
+  }
+  #item-3-8 {
+    grid-column: 2;
+    grid-row: 5;
+  }
+  #item-3-9 {
+    grid-column: 1;
+    grid-row: 6;
+  }
+  #item-3-10 {
+    grid-column: 2;
+    grid-row: 6;
+  }
+  #item-3-11 {
+    grid-column: 1;
+    grid-row: 7;
+  }
+  #item-3-12 {
+    grid-column: 2;
+    grid-row: 7;
+  }
+  #item-3-13 {
+    grid-column: 1;
+    grid-row: 8;
+  }
+  #item-3-14 {
+    grid-column: 1/2;
+    grid-row-start: 15;
+    width: 100%;
+  }
+
+
+    /* footer */
+  #footer {
+    display: grid;
+    grid-template-rows: auto auto auto;
+  }
+
+  #item-1 {
+    grid-row: 1;
+    grid-column: 1;
+  }
+
+  #item-2 {
+    grid-row: 2;
+    grid-column: 1;
+  }
+
+  #item-3 {
+    grid-row: 3;
+    grid-column: 1;
+  }
+
+  .items {
+    margin: 5px;
   }
 }
-*/
